--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,8 @@
-<h1>Hello world. My name is Kent</h1>
+<div class="jumbotron">
+	<h1>Stukdo</h1>
+	<p>This is my smart to do list Ruby on Rails application</p>
+	<%= link_to "Sign Up","#", class: "btn btn-primary btn-lg"%>
+
+	<div>
 
 
